Revert "fix broken css"
This reverts commit 2db5469d463e6b1da36c3774d0623f8cea9a5210.

--- a/game/UI.css
+++ b/game/UI.css
@@ -107,10 +107,8 @@ td.HandBookZombie {
 }
 
 .WindowFrame {
-    transform: scale(.9);
-    /* Điều chỉnh tỷ lệ theo nhu cầu */
-    transform-origin: left;
-    /* Đặt điểm gốc cho hiệu ứng scale */
+    transform: scale(.9); /* Điều chỉnh tỷ lệ theo nhu cầu */
+      transform-origin: left; /* Đặt điểm gốc cho hiệu ứng scale */
     position: absolute;
     top: -27;
     width: 900px;
@@ -468,7 +466,7 @@ td.HandBookZombie {
     top: 70px
 }
 
-#dSelectLevel {
+@#dSelectLevel {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -496,7 +494,7 @@ td.HandBookZombie {
     overflow: hidden
 }
 
-#dTitleSmallContainer span {
+@#dTitleSmallContainer span {
     cursor: pointer
 }
 
@@ -1269,7 +1267,7 @@ td.HandBookZombie {
     visibility: hidden;
     z-index: 250;
     padding: 6px;
-    padding: 6px 5px 10px 2px
+    *padding: 6px 5px 10px 2px
 }
 
 #dProcess img {
@@ -1548,7 +1546,7 @@ dd.yellow {
 .Sunflower_trophy img {
     position: absolute;
     left: -157px;
-    filter: glow(color=#ffffff, strength=8)
+    *filter: glow(color=#ffffff, strength=8)
 }
 
 #dLogin {
